# experiments

./: .eslintrc.base.json  .eslintrc.json  .gitignore  .graphqlconfig  .pnp.cjs  .swcrc  .yarnrc.yml  README.md  angular.json  bun.lockb  bunfig.toml  cypress.config.js  docker-compose.yml  eslint.config.js  gatsby-config.js  gatsby-node.js  index.html  index.js  index.mjs  jest.config.app.ts  jest.config.js  jest.config.tcr.js  jest.config.ts  jest.preset.cjs  karma.conf.js  main.ts  migrations.json  ngx-light.mjs  nx-dep-constraints.js  nx.json  openapi.yaml  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  pnpm-lock.yaml  project.json  pyproject.toml  schema.gql  schema.graphql  (+13 more)
cypress/: tsconfig.cy.json
demo/: add_recipe.py  main.py  test_add_recipe.py
design-docs/: recipe-search.md
docs/: migration-workshop.md
e2e/: .eslintrc.json  project.json  tsconfig.json
libs/: eslint.config.js  jest.config.ts  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.mts
playwright/: get-recipes.spec.ts  index.ts  playwright-ct-angular.ts  remove-ingredient.spec.ts  tsconfig.json
playwright-ct-angular/: index.ts  register-source.mjs
plugins/: implicit-libs.ts
public/: index.html  index.js  ngx-light.js
src/: Dockerfile  hello.spec.ts  index.html  main.ts  main.vite.ts  parse-price.spec.ts  parse-price.xspec.ts  post-recipes.spec.ts  recipes-secure.openapi.yaml  recipes.openapi.yaml  remove-ingredient.spec.ts  remove-recipe.spec.ts  start-service.ts  styles.css  test-setup.ts  vitest-zone-patch.ts
tests/: test_demo.py  (+1 more)
(+855 files in other folders)
