[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Younes Jaaidi <younes@marmicode.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ortools = "^9.8.3296"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
